<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/mapFragment">



    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.ulp.samsinmibiliaria.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />


    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.ulp.samsinmibiliaria.ui.inmuebles.InmuebleFragment"
        android:label="@string/menu_inmuebles"
        tools:layout="@layout/fragment_inmuebles" >
        <action
            android:id="@+id/action_nav_Inmuebles_to_detalleInmueble"
            app:destination="@id/detalleInmueble" />
        <action
            android:id="@+id/action_nav_Inmuebles_to_nav_NuevoInmueble"
            app:destination="@id/nav_NuevoInmueble" />
    </fragment>



    <fragment
        android:id="@+id/nav_NuevoInmueble"
        android:name="com.ulp.samsinmibiliaria.ui.inmuebles.NuevoFragment"
        android:label="@string/Agregar_Inmueble"
        tools:layout="@layout/fragment_nuevo" >
        <action
            android:id="@+id/action_nav_NuevoInmueble_to_nav_Inmuebles"
            app:destination="@id/nav_inmuebles" />
        <action
            android:id="@+id/action_nav_NuevoInmueble_to_nav_Inmuebles2"
            app:destination="@id/nav_inmuebles" />
    </fragment>


    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.ulp.samsinmibiliaria.ui.contratos.ContratoFragment"
        android:label="@string/menu_contratos"
        tools:layout="@layout/fragment_contratos" >

        <action
            android:id="@+id/action_nav_contratos_to_Inquilinos"
            app:destination="@id/nav_inquilinos" />
    </fragment>


    <fragment
        android:id="@+id/detalleInmueble"
        android:name="com.ulp.samsinmibiliaria.ui.inmuebles.DetalleInmuebleFragment"
        android:label="@string/Detalle"
        tools:layout="@layout/fragment_detalle_inmueble" >
        <action
            android:id="@+id/action_detalleInmueble_to_nav_Inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>


    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.ulp.samsinmibiliaria.ui.contratos.inquilinos.InquilinosFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/fragment_inquilinos" >
        <action
            android:id="@+id/action_Inquilinos_to_nav_contratos"
            app:destination="@id/nav_contratos" />
        <action
            android:id="@+id/action_Inquilinos_to_nav_pagos"
            app:destination="@id/nav_pagos" />
    </fragment>


    <fragment
        android:id="@+id/nav_pagos"
        android:name="com.ulp.samsinmibiliaria.ui.pago.PagoFragment"
        android:label="@string/Pagos"
        tools:layout="@layout/fragment_pago" >

        <action
            android:id="@+id/action_nav_pagos_to_detallePagoFragment"
            app:destination="@id/detallePagoFragment" />
        <action
            android:id="@+id/action_nav_pagos_to_Inquilinos"
            app:destination="@id/nav_inquilinos" />
    </fragment>


    <fragment
        android:id="@+id/detallePagoFragment"
        android:name="com.ulp.samsinmibiliaria.ui.inmuebles.DetalleInmuebleFragment"
        android:label="@string/Detalle"
        tools:layout="@layout/fragment_detalle_pago" >
        <action
            android:id="@+id/action_detallePagoFragment_to_nav_pagos"
            app:destination="@id/nav_pagos" />
    </fragment>


    <fragment
        android:id="@+id/nav_salir"
        android:name="com.ulp.samsinmibiliaria.ui.salida.SalidaFragment"
        android:label="@string/menu_salir"
        tools:layout="@layout/fragment_salida" />


    <fragment
        android:id="@+id/mapFragment"
        android:name="com.ulp.samsinmibiliaria.ui.mapa.MapsFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_maps" />


</navigation>